--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -371,6 +371,22 @@ main.main-container {
     color: white;
 }
 
+.challenge-card .check-box .completed {
+    display: none;
+}
+
+.challenge-card .check-box .not-completed {
+    display: block;
+}
+
+.challenge-card.completed-challenge .check-box .completed {
+    display: block;
+}
+
+.challenge-card.completed-challenge .check-box .not-completed {
+    display: none;
+}
+
 footer {
     text-align: center;
     padding: 0 50px 20px;
