--- a/css/shared-components.css
+++ b/css/shared-components.css
@@ -1,4 +1,4 @@
-.main-container {
+.main {
     padding: 8rem 2rem;
     color: var(--white);
 }
@@ -164,7 +164,7 @@
 }
 
 @media (max-width: 900px) {
-    .main-container {
+    .main {
         padding: 13rem 1rem;
     }
     .main-title.category-title {
