--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
     width: 100%;
-    min-height: 43em;
-    padding: 6rem 3rem;
+    padding: 0 3rem 6rem;
 }
 
 .text-intro {
@@ -47,7 +46,7 @@
 .intro .image-intro {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 45%;
 }
 
@@ -337,11 +336,9 @@
 
     .intro {
         flex-direction: column-reverse;
-        min-height: auto;
         gap: 0;
         margin-bottom: 10rem;
-        margin-top: 5rem;
-        padding: 3rem 1rem;
+        padding: 0 1rem 3rem;
         text-align: center;
     }
     .text-intro {
