--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 2rem;
     width: 100%;
     padding: 0 3rem 6rem;
@@ -46,7 +46,6 @@
 .intro .image-intro {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
     width: 45%;
 }
 
